--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -227,23 +227,16 @@ fa:
             nation_id: 'ملیت'
             passport_no: 'شماره گذرنامه '
             father_name: 'نام پدر'
-        agency:
-            name: 'نام شرکت'
-            subdomain: 'دامنه'
-            tel: 'تلفن'
-            mobile: 'تلفن همراه'
-            fax: 'فکس'
-            telegram_channel: 'کانال تلگرام'
-            instagram_page: 'صفحه اینستاگرام'
-            email: 'ایمیل'
-            address: 'آدرس'
-            about_us: 'درباره ما'
+        status:
+             start_point: 'نقطه شروع'
         project:
             title: 'عنوان '
             details: 'توضیحات'
+            p_type: 'نوع '
         advertiser:
           title: 'عنوان '
           details: 'توضیحات'
+          p_type: 'نوع '
         blog:
             title: 'عنوان'
             content: 'متن'
@@ -260,6 +253,32 @@ fa:
     page_gap: "&hellip;"
     previous_label: "قبلی"
     next_label: "بعدی"
+  participate: 'مشارکت'
+  milestones: 'مراحل'
+  tasks: 'وظایف'
+  status: 'وضعیت'
+  subscribed_at: 'تاریخ عضویت'
+  event_accepted: 'رخداد های پذیرفته شده'
+  unsubscribed_sucessfully: 'عضویت لغو شد'
+  inspecting: 'درحال بررسی'
+  private: 'خصوصی'
+  public: 'عمومی'
+  unsubscribe: 'لغو عضویت'
+  your_request_has_been_processed: 'درخواست شما ثبت شد'
+  are_you_sure: 'آیا مطمئن هستید؟'
+  is_already_exist: 'قبلا وجود دارد'
+  end: 'پایان'
+  start: 'شروع'
+  Subscription: 'عضویت'
+  subscription: 'عضویت'
+  next_id: 'گام بعدی'
+  previous_id: 'گام قبلی '
+  scope_type: 'قسمت'
+  end_point: 'نقطه پایان'
+  start_point: 'نقطه شروع'
+  title: 'عنوان'
+  statuses: 'حالت ها '
+  overlapping_events: 'رخداد متلاقی'
   advertiser_events: 'اعلانات'
   users: 'اعضا'
   subscribe: 'عضویت'
