--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -249,10 +249,26 @@ fa:
             password: 'رمز عبور'
             password_confirmation: 'تکرار رمز عبور'
             remember_me: 'مرا به خاطر بسپار'
+        task:
+            deadline: 'مهلت نهایی'
   will_paginate:
     page_gap: "&hellip;"
     previous_label: "قبلی"
     next_label: "بعدی"
+  related_users: 'کاربران مرتبط '
+  deadline_time: 'ساعت'
+  deadline: 'مهلت نهایی'
+  unparticipate: 'لغو مشارکت'
+  Participation: 'مشارکت '
+  participation: 'مشارکت '
+  participants: 'افراد '
+  partcipate: 'مشارکت '
+  change_status: 'تغییر وضعیت'
+  change: 'تغییر '
+  remove_request: 'لغو درخواست '
+  successfully_destroyed: 'حذف شد'
+  successfully_created: 'با موفقیت ایجاد شد '
+  successfully_updated: 'با موفقیت بروزرسانی شد'
   milestone: 'مرحله '
   tasks_list: 'لیست وظایف'
   new_task: 'وظیفه جدید '
